# Credify

backend/: auth.py  database.py  main.py  models.py  requirements.txt
core/: CMakeLists.txt  run.ps1
core/cli/: main.cpp
core/include/ccims/engines/: AnalyticsEngine.h  LoungeEngine.h  RewardEngine.h  StatementEngine.h  TransactionManager.h
core/include/ccims/models/: CardProfile.h  Rule.h  StatementCycle.h  Transaction.h
core/include/ccims/storage/: JsonConfigLoader.h  SQLiteStorage.h
core/src/: pybind_module.cpp
core/src/engines/: AnalyticsEngine.cpp  LoungeEngine.cpp  RewardEngine.cpp  StatementEngine.cpp  TransactionManager.cpp
core/src/storage/: JsonConfigLoader.cpp  SQLiteStorage.cpp
data/: cards.json  ccims.db
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx
frontend/src/app/(app)/: layout.tsx
frontend/src/app/(app)/alerts/: page.tsx
frontend/src/app/(app)/analytics/: page.tsx
frontend/src/app/(app)/cards/[id]/: page.tsx
frontend/src/app/(app)/catalogue/: page.tsx
frontend/src/app/(app)/dashboard/: page.tsx
frontend/src/app/(app)/portfolio/: page.tsx
frontend/src/app/(app)/recommend/: page.tsx
frontend/src/app/(app)/transactions/: page.tsx
frontend/src/app/(auth)/: layout.tsx
frontend/src/app/(auth)/login/: page.tsx
frontend/src/app/(auth)/register/: page.tsx
frontend/src/app/(onboarding)/setup/: page.tsx
frontend/src/components/: AuthGuard.tsx
frontend/src/components/ui/: AnimatedInput.tsx  GlassPanel.tsx  PremiumButton.tsx
frontend/src/lib/: api.ts
